@@ -1,0 +1,1 @@
+usr/lib/python3/dist-packages/sipconfig_d*.py
