@@ -1,6 +1,7 @@
 sip4 (4.19.16+dfsg-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Use dh sequencer and the pybuild buildsystem.
 
  -- Dmitry Shachnev <mitya57@debian.org>  Thu, 18 Apr 2019 20:28:49 +0300
 
